--- a/project/app/src/main/res/layout/activity_chat_nav.xml
+++ b/project/app/src/main/res/layout/activity_chat_nav.xml
@@ -18,13 +18,15 @@
         app:title="friend name"
         tools:layout_editor_absoluteX="0dp" />
 
-    <LinearLayout
+    <ListView
         android:id="@+id/textBox"
         android:layout_width="match_parent"
-        android:layout_height="609dp"
-        android:orientation="vertical"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"></LinearLayout>
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/keyboard"
@@ -36,6 +38,7 @@
 
         <EditText
             android:id="@+id/inputBox"
+            android:layout_width="20dp"
             android:layout_height="match_parent"
             android:layout_weight="4"
             android:ems="10"
@@ -44,7 +47,7 @@
 
         <Button
             android:id="@+id/sendMessage"
-            android:layout_width="4dp"
+            android:layout_width="20dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Send" />
