true location fun

--- a/project/app/src/main/res/layout/activity_map_main.xml
+++ b/project/app/src/main/res/layout/activity_map_main.xml
@@ -20,14 +20,12 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="411dp"
+        android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
+        android:background="#707070"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
@@ -35,6 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="#707070"
             android:onClick="map_GetCurrentLocation"
             android:text="Location" />
 
@@ -43,6 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="#707070"
             android:onClick="map_CheckPoints"
             android:text="Check" />
 
@@ -51,6 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="#707070"
             android:onClick="map_listView"
             android:text="List" />
     </LinearLayout>
