--- a/project/app/src/main/res/layout/message_chat.xml
+++ b/project/app/src/main/res/layout/message_chat.xml
@@ -5,33 +5,35 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/user_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:shadowColor="#9E2828"
+        android:text="user_name"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="#2941C8" />
+
+    <TextView
+        android:id="@+id/message"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:text="Message"
+        android:textAlignment="textStart"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="time"
+        android:textColor="#7A7A7A" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/user_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:shadowColor="#9E2828"
-            android:text="user_name"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="#2941C8" />
-
-        <TextView
-            android:id="@+id/message"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:text="Message"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-
-        <TextView
-            android:id="@+id/time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="time"
-            android:textColor="#7A7A7A" />
     </LinearLayout>
 
 </LinearLayout>
