--- a/project/app/src/main/res/layout/activity_initial_page.xml
+++ b/project/app/src/main/res/layout/activity_initial_page.xml
@@ -10,10 +10,12 @@
         android:id="@+id/signin"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:layout_marginLeft="200dp"
         android:onClick="onClickSignIn"
         android:text="Sign in"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
