--- a/project/app/src/main/res/layout/fragment_setting.xml
+++ b/project/app/src/main/res/layout/fragment_setting.xml
@@ -163,5 +163,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_modify" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="53dp"
+        android:layout_marginBottom="231dp"
+        android:text="Button"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout_setting"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
