gender display on/off

--- a/project/app/src/main/res/layout/fragment_setting.xml
+++ b/project/app/src/main/res/layout/fragment_setting.xml
@@ -7,47 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".fragment_setting_setting">
 
-    <TextView
-        android:id="@+id/dis_email"
-        android:layout_width="wrap_content"
-        android:layout_height="34dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/txt_email_set"
-        app:layout_constraintTop_toBottomOf="@+id/dis_username" />
-
-    <TextView
-        android:id="@+id/dis_gender"
-        android:layout_width="wrap_content"
-        android:layout_height="34dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/txt_gender_set"
-        app:layout_constraintTop_toBottomOf="@+id/dis_birthday" />
-
-    <TextView
-        android:id="@+id/dis_birthday"
-        android:layout_width="wrap_content"
-        android:layout_height="34dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/txt_birthday_set"
-        app:layout_constraintTop_toBottomOf="@+id/dis_email" />
-
-    <TextView
-        android:id="@+id/txt_gender_set"
-        android:layout_width="115dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="32dp"
-        android:text="Gender:"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_birthday_set" />
-
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_setting"
         android:layout_width="match_parent"
@@ -87,49 +46,6 @@
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/txt_birthday_set"
-        android:layout_width="115dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="32dp"
-        android:text="Birthday:"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_email_set" />
-
-    <TextView
-        android:id="@+id/txt_email_set"
-        android:layout_width="115dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="32dp"
-        android:text="Email:"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_username_set" />
-
-    <TextView
-        android:id="@+id/dis_username"
-        android:layout_width="wrap_content"
-        android:layout_height="34dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="84dp"
-        android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/txt_username_set"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_setting" />
-
-    <TextView
-        android:id="@+id/txt_username_set"
-        android:layout_width="115dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="84dp"
-        android:text="Username:"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_setting" />
-
     <Button
         android:id="@+id/btn_logout"
         android:layout_width="wrap_content"
@@ -137,20 +53,9 @@
         android:layout_marginTop="16dp"
         android:text="log out"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_allpost_setting" />
-
-    <Button
-        android:id="@+id/btn_modify"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        android:text="modify"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_gender_set" />
 
     <Button
         android:id="@+id/btn_allpost_setting"
@@ -159,19 +64,97 @@
         android:layout_marginTop="16dp"
         android:text="all  post"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_modify" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_modify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="53dp"
-        android:layout_marginBottom="231dp"
-        android:text="Button"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout_setting"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:layout_marginTop="32dp"
+        android:text="modify"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout4"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/dis_username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:hint="Username" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/dis_gender"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:hint="Gender" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout2"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/dis_birthday"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:hint="Birthday" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout3"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/dis_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:hint="Email" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="97dp"
+        android:layout_height="93dp"
+        android:layout_marginTop="4dp"
+        android:src="@android:mipmap/sym_def_app_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_setting" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
