--- a/project/app/src/main/res/layout/activity_chat_location.xml
+++ b/project/app/src/main/res/layout/activity_chat_location.xml
@@ -24,6 +24,40 @@
         android:layout_marginBottom="60dp"
         android:id="@+id/fragment_chat_location"
         android:name="com.google.android.gms.maps.SupportMapFragment"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        app:layout_constraintTop_toTopOf="@id/toolbar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:elevation="10dp"
+        android:id="@+id/search_bar"
+        android:layout_marginTop="80dp"
+        android:outlineAmbientShadowColor="#000"
+        android:background="@drawable/white_border">
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:id="@+id/ic_magnify"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/icon_magnify"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toRightOf="@+id/ic_magnify"
+            android:layout_marginLeft="10dp"
+            android:layout_centerVertical="true"
+            android:textSize="15sp"
+            android:textColor="#000"
+            android:id="@+id/input"
+            android:background="@null"
+            android:imeOptions="actionSearch"
+            android:hint="Enter Address"/>
+
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/bottomBar"
