--- a/project/app/src/main/res/layout/activity_chat_nav.xml
+++ b/project/app/src/main/res/layout/activity_chat_nav.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:textIsSelectable="true"
     tools:context=".chat_nav">
 
     <androidx.appcompat.widget.Toolbar
@@ -28,6 +29,7 @@
         android:keepScreenOn="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="parent"
+        android:textIsSelectable="true"
         app:layout_constraintTop_toTopOf="parent" />
 
 
