--- a/project/app/src/main/res/layout/chat_message.xml
+++ b/project/app/src/main/res/layout/chat_message.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:Android="http://schemas.android.com/apk/res-auto"
     android:id="@+id/window"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
+    android:textIsSelectable="true"
+    android:adjustViewBounds="true"
     android:orientation="vertical">
 
         <LinearLayout
@@ -25,13 +28,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="TextView"
+                    android:textIsSelectable="true"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
                 <ImageView
                     android:id="@+id/sendPicture"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxHeight="100dp"/>
+                    android:layout_height="wrap_content"/>
 
                 <TextView
                     android:id="@+id/sendTime"
