--- a/project/app/src/main/res/layout/activity_friendlist.xml
+++ b/project/app/src/main/res/layout/activity_friendlist.xml
@@ -16,24 +16,29 @@
         android:theme="?attr/actionBarTheme"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="60dp"
         android:layout_marginBottom="80dp"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.6">
+        android:orientation="vertical">
 
-        <ListView
-            android:id="@+id/item"
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:text="Notifications"
+            android:id="@+id/notifications"/>
 
-        </ListView>
+        <fragment
+            android:id="@+id/fragment_place"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="com.example.groupproject.fragment_friendlist"/>
+
     </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
