--- a/project/app/src/main/res/layout/activity_friendlist.xml
+++ b/project/app/src/main/res/layout/activity_friendlist.xml
@@ -76,4 +76,17 @@
     </LinearLayout>
 
 
+    <fragment
+        android:id="@+id/fragment_search"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="500dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="80dp"
+
+        android:name="com.example.groupproject.fragment_search"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
