--- a/project/app/src/main/res/layout/activity_profile.xml
+++ b/project/app/src/main/res/layout/activity_profile.xml
@@ -46,19 +46,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="450dp"
+        android:layout_marginTop="500dp"
         android:orientation="vertical">
 
         <Button
             android:id="@+id/button1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="button1Function"
             android:text="send message" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="showPost"
             android:text="post" />
     </LinearLayout>
 
