--- a/project/app/src/main/res/layout/fragment_search.xml
+++ b/project/app/src/main/res/layout/fragment_search.xml
@@ -3,33 +3,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/background_light"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment_search">
 
     <!-- TODO: Update blank fragment layout -->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:minHeight="50dp"
+        android:minHeight="40dp"
         android:layout_height="wrap_content"
-        app:helperText="Input user's email to search">
+        android:hint="Input user's email to search">
 
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/searchText"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:hint="hint" />
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_height="40dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <LinearLayout
-
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="70dp"
-        android:orientation="vertical">
-
         <ListView
-            android:id="@+id/item"
+            android:id="@+id/result"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#E6DCBE">
