--- a/project/app/src/main/res/layout/fragment_modify.xml
+++ b/project/app/src/main/res/layout/fragment_modify.xml
@@ -91,6 +91,8 @@
         android:ems="10"
         android:hint="Birthday"
         android:inputType="date"
+        android:onClick="setBirthday"
+        android:focusableInTouchMode="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_email_til" />
 
