--- a/project/app/src/main/res/layout/activity_setting.xml
+++ b/project/app/src/main/res/layout/activity_setting.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".setting_main">
 
+
     <fragment
         android:id="@+id/setting_nav_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
@@ -20,5 +21,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:navGraph="@navigation/nav_graph_setting" />
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="#3872AA"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="Setting"
+        tools:layout_editor_absoluteX="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
